force-app/main/default/objects/InteractionViewRelatedListSettings__c/InteractionViewRelatedListSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Interaction View Related List Settings</label>
</CustomObject>