force-app/main/default/objects/InteractionViewRelatedListSettings__c/fields/HideButtons__c.field-meta.xml
<CustomField>
    <fullName>HideButtons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Buttons</label>
    <type>Checkbox</type>
</CustomField>