force-app/main/default/objects/InteractionViewRelatedListSettings__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>