force-app/main/default/objects/InteractionViewRelatedListSettings__c/fields/SectionLabel__c.field-meta.xml
<CustomField>
    <fullName>SectionLabel__c</fullName>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>