force-app/main/default/objects/InteractionViewRelatedListSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HideButtons__c</columns>
    <columns>HideList__c</columns>
    <columns>LinkableField__c</columns>
    <columns>ObjectName__c</columns>
    <columns>ParentFieldName__c</columns>
    <columns>RelationshipName__c</columns>
    <columns>FieldList__c</columns>
    <columns>Filters__c</columns>
    <columns>SectionLabel__c</columns>
    <columns>DisplayOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>